Update and rename test_1.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Scroll Animation</title>
+    <title>Your Page</title>
 </head>
 <body>
-    <div class="animate-on-scroll">
-        <h1>애니메이션으로 나타나는 텍스트</h1>
-        <img src="example.jpg" alt="애니메이션으로 나타나는 이미지">
+    <div class="content">
+        <div class="animation-container">
+            <p class="animated-text">Your Animated Text</p>
+            <img class="animated-image" src="your-image.jpg" alt="Your Image">
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
