--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Your Page</title>
+    <title>바보이반의 내전</title>
 </head>
 <body>
     <div class="content">
         <div class="animation-container">
-            <p class="animated-text">Your Animated Text</p>
-            <img class="animated-image" src="your-image.jpg" alt="Your Image">
+            <h1 class="animated-title">"바보이반의 내전에 오신것을 환영합니다."</h1>
+            <img class="animated-image" src="testimage_1.jpg" alt="Your Image">
+            <p class="animated-text">누가</p>
+            <img class="animated-image" src="testimage_2.jpg" alt="Your Image">
+            <p class="animated-text">왕좌를</p>
+            <img class="animated-image" src="testimage_3.jpg" alt="Your Image">
+            <p class="animated-text">차지할 것인가.</p>
+            <p class="animated-text">싸워라.</p>
+            <p class="animated-text">쟁취하라.</p>
         </div>
     </div>
     <script src="script.js"></script>
