--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="content">
         <div class="animation-container">
             <h1 class="animated-title">"바보이반의 내전에 오신것을 환영합니다."</h1>
-            <img class="animated-image" src="testimage_1.jpg" alt="Your Image">
+            <img class="animated-image" src="testimage_1.png" alt="Your Image">
             <p class="animated-text">누가</p>
             <img class="animated-image" src="testimage_2.jpg" alt="Your Image">
             <p class="animated-text">왕좌를</p>
